TOC on iOS Fix attempt 3
Static

--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -107,7 +107,7 @@ body, input, textarea, select {
 }
 
 #links.affix {
-  position: sticky;
+  position: static;
   transform: translateZ(0);
 }
 
